# Bin2Wrong

mutation/src/code-mutators/: CodeMutators.cpp
mutation/src/standalone-cli/: CMakeLists.txt  README.md  main.cpp
